2004-04-05  William A. Perkins  <william.perkins@pnl.gov>

	* block_bc_module.f90 (read_bcspecs): do not use  out of range
	block numbers

2004-01-30  William A. Perkins  <william.perkins@pnl.gov>

	* scripts/mass2slice.pl: add -D option to eliminate output from
	dry cells

	* mass2_main_025.f90 (start_up): profile_init needs to be called
	*after* metrics

2004-01-28  William A. Perkins  <william.perkins@pnl.gov>

	* profile_init.f90 (profile_init): rearranged the code and added
	the ability to initialize the velocity as well as stage.  

2004-01-27  William A. Perkins  <william.perkins@pnl.gov>

	* test/flow/another-jump: Added hydraulic jump case using ELEVELO
	boundary condition.

2004-01-26  William A. Perkins  <william.perkins@pnl.gov>

	* mass2_main_025.f90 (apply_hydro_bc): use the ELEVELO boundary
	condition type to set FLOWBC_BOTH conditions
	(start_up): do not write ghost cells to gridplot1.dat anymore
	(hydro): when velocities are dead (walls) use a slip condition not
	a non-slip condition to be consistent with block sides

	* block_bc_module.f90 (read_bcspecs): Allow the keyword ELEVELO in
	bcspecs.dat.

	* global_module_023.f90: added FLOWBC_BOTH hydrodynamic boundary
	condition where both stage and velocity are specified in the same
	file. 

2003-12-31  William A. Perkins  <william.perkins@pnl.gov>

	* mass2_main_025.f90 (apply_hydro_bc): handle ZEROG hydro BC type 

	* global_module_023.f90 (globals): add ZEROG hydro BC type

	* block_bc_module.f90 (read_bcspecs): add ZEROG BC type

	* test/flow/normal-1blk/mass2_v027.base: make starting conditions
	the same as other normal flow cases

2003-11-21  William A. Perkins  <william.perkins@pnl.gov>

	* gage_output_module.f90 (mass_print): more resolution in output.

2003-11-14  William A. Perkins  <william.perkins@pnl.gov>

	* util/cart_grid/cartgrid.f90: Increase resolution of output
	format  

	* mass2_main_025.f90 (hydro): Make walls a non-slip internal
	boundary. 
